# bibi

./: README.md
.github/workflows/: release.yml
qt-reader/: .gitignore  CMakeLists.txt  README.md  app.rc  build.ps1  resources.qrc
qt-reader/.github/workflows/: release.yml
qt-reader/packaging/linux/: BibiQtReader.desktop
qt-reader/src/: bookmarkmanager.cpp  bookmarkmanager.h  epubreader.cpp  epubreader.h  epuburlscheme.cpp  epuburlscheme.h  epubwebpage.cpp  epubwebpage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_bookmark.cpp  mainwindow_buffer.cpp  mainwindow_navigation.cpp  mainwindow_private.h  mainwindow_search.cpp  mainwindow_setup.cpp  mainwindow_ui.cpp  recentfiles.cpp  recentfiles.h  searchdialog.cpp  searchdialog.h
qt-reader/src/scripts/: bibi_clear_highlights.js  bibi_drag.js  bibi_ellipsis.js  bibi_get_reading_position.js  bibi_keyboard.js  bibi_page_ready.js  bibi_position_reporter.js  bibi_reading_insets.js  bibi_scroll_to_position.js  bibi_search_highlight.js  bibi_wheel.js  bibi_zoom.js
